Bug 1600149 - Don't cleanup coverage in Realm::finishRoots. r=jonco

The coverage tables stored on the Zone are weak references. Entries are
removed when JSScripts are finalized. This patch removes the erroneous calls
to clearScriptLCov in Realm::finishRoots. Without this, the map gets
destroyed during shutdown before it is finished being used by the JSScript
finalizers.

Differential Revision: https://phabricator.services.mozilla.com/D55183

--HG--
extra : moz-landing-system : lando